# idea-open-source

./: .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  README.md  azure-pipelines.yml  pyproject.toml  sonar-project.properties
examples/: calculate_minutes_no_coverage.py  calculate_profile.py  validate_roadwork.py
examples/util/: util.py  visualization.py
idea/: cli_overrides.py  constants.py  exceptions.py
idea/profile/: profile.py  util.py
idea/tests/: test_cli_overrides.py
idea/tests/profile/: test_profile.py  test_util.py
idea/tests/resources/profile/01busy/: expected.csv
idea/tests/resources/profile/02regular/: expected.csv
idea/tests/resources/validation/01busy_no_closed/: expected.csv  fcd_during_roadwork.csv
idea/tests/resources/validation/02busy_and_closed/: expected.csv
idea/tests/resources/validation/03not_busy_and_closed/: expected.csv  fcd_during_roadwork.csv
idea/tests/util/: test_util.py
idea/tests/validation/: test_util.py  test_validation.py
idea/util/: error_filter.py  logger_properties.py  util.py
idea/validation/: util.py  validation.py
